2005-02-28  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/config_file.rb: don't warn about not being able to
	find config file.
	* lib/rubygems/doc_manager.rb: (for DHH) don't install rdoc docs for
	gems that have explicitly set has_rdoc to false (not setting it
	at all doesn't raise an error)

2005-02-27  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/config_file.rb
	(Gem::ConfigFile::default_config_file_name): Fixed bug in finding
	home directory for the .gemrc file.

2005-02-27  Chad Fowler  <chad@chadfowler.com>

	* Released 0.8.6

	* Fixed a small bug with shebang construction

2005-02-26  Jim Weirich  <jim@weirichhouse.org>

	* Released 0.8.5

	* lib/rubygems/doc_manager.rb (Gem::DocManager::generate_rdoc):
	Removed warning about generating rdocs on gems w/o an rdoc flag.

	* lib/rubygems/gem_commands.rb
	(Gem::UpdateCommand::do_rubygems_update): Added --system option to
	update to specifically update the version of rubygems.
	(Gem::UpdateCommand::which_to_update): Fixed some refactoring bugs
	in the which_to_update method.

	* lib/rubygems/remote_installer.rb
	(Gem::LocalSourceInfoCache::read_cache): switched to Marshal
	rather than Yaml for local cache.

	* bin/gem: Added requirement for Ruby >= 1.8.0.

2005-02-10  Chad Fowler  <chad@chadfowler.com>
	* bin/gem_server: Added Martin Ankerl's wonderful new gem_server
	template

2005-01-27  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/gem_commands.rb: Fixed
	`gem update` so it accepts a list of gems to update and _only_
	updates those.
	* lib/rubygems/installer.rb: Fixed a bug in the new shebang code.
	* lib/rubygems/remote_installer.rb: Attempt to fix Curt Hibbs'  
	reported Proxy bug without actually having a proxy to test with.

2005-01-22  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/custom_require.rb: Lyle Johnson's fix for Bug #1379

2005-01-20  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/validator.rb: Applied Austin Ziegler/Kasper Schiess's